- fixed bug reorder totem 
- fixed tooltip issue

-----------------------
- fixed bar positioning
- fixed hide bar status in config
- option to save totem sets
- removed LibActionButton dependency

----------------------
- added keybinding
- create multicast macro for totems
- fixed some issues (bar positioning, ... )

----------------------
- fixed bug in config menu
- fixed bug, do not load the totems 
---------------------
- fixed wrong duration for some totems
----------------------
- option to hide totem timer
----------------------
- fixed bug: hidden totems are visible again after relog
----------------------
- fixed bug: timer doesnt start
----------------------
- add minimap icon
- remove timer when player is dead
- bugfix problem with setting orientation 

-----------------------
- show popups on keypress (set up key in config menu)
- add totemtimers
- changes savefile
